# nuge-app

./: .commitlintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  docker-compose.yml  package-lock.json  package.json  turbo.json
.cursor/rules/: project.mdc
.github/: HUSKY_QUICK_REFERENCE.md  README.md
.github/workflows/: ci.yml  deploy.yml  production-deploy.yml  security.yml
.husky/: commit-msg  pre-commit  pre-push
api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_logging.md  mypy.ini  package.json  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 7e4f32a9f1f6_.py
api/docs/: folder-structure.md  getting-started.md  roadmap.md
api/scripts/: create_module.sh
api/src/: config.py  logging_config.py  main.py  supabase.py
api/src/auth/: dependency.py  enum.py  router.py  schemas.py  service.py
api/src/core/: README.md  __init__.py  error_handlers.py  exceptions.py  response.py
api/src/db/: config.py  utils.py
api/src/middleware/: __init__.py  logging_middleware.py  request_middleware.py
api/src/payments/: configs.py  exceptions.py  models.py  router.py  schemas.py  service.py  webhook_service.py  webhook_utils.py
api/src/users/: exceptions.py  models.py  router.py  router_example.py  schemas.py  service.py
docs/: husky-setup.md
mobile/: package-lock.json  package.json  tsconfig.json
scripts/: dev-cleanup.sh  dev-setup.sh  setup-api.sh
shared/: index.ts  package.json  tsconfig.json
shared/constants/: index.ts
supabase/: config.toml
supabase/migrations/: 20250612115318_initial_schema.sql
web/: package.json
